Added Postgre SQL

--- a/TravelManagement/appsettings.json
+++ b/TravelManagement/appsettings.json
@@ -7,8 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-UKG9315U\\SQLEXPRESS;Database=Practice;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Host=aws-0-ap-southeast-1.pooler.supabase.com;Port=5432;Database=postgres;Username=postgres.exfoiskrvhxofsfzridh;Password=mR4SS2Zmga.aHSP;SSL Mode=Require;Trust Server Certificate=True"
   },
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=LAPTOP-UKG9315U\\SQLEXPRESS;Database=Practice;Trusted_Connection=True;TrustServerCertificate=True;"
+  //},
   "JwtSettings": {
     "Key": "ThisIsMyUltraSecretSuperJwtKey123456",
     "Issuer": "TravelManagementAPI",
