--- a/TravelManagement/appsettings.json
+++ b/TravelManagement/appsettings.json
@@ -6,16 +6,26 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=aws-0-ap-southeast-1.pooler.supabase.com;Port=5432;Database=postgres;Username=postgres.exfoiskrvhxofsfzridh;Password=mR4SS2Zmga.aHSP;SSL Mode=Require;Trust Server Certificate=True"
-  },
   //"ConnectionStrings": {
-  //  "DefaultConnection": "Server=LAPTOP-UKG9315U\\SQLEXPRESS;Database=Practice;Trusted_Connection=True;TrustServerCertificate=True;"
+  //  "DefaultConnection": "Host=aws-0-ap-southeast-1.pooler.supabase.com;Port=5432;Database=postgres;Username=postgres.exfoiskrvhxofsfzridh;Password=mR4SS2Zmga.aHSP;SSL Mode=Require;Trust Server Certificate=True"
   //},
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-UKG9315U\\SQLEXPRESS;Database=Practice;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "JwtSettings": {
     "Key": "ThisIsMyUltraSecretSuperJwtKey123456",
     "Issuer": "TravelManagementAPI",
     "Audience": "TravelManagementClient",
     "DurationInMinutes": 60
+  },
+  "Email": {
+    "Host": "imap.gmail.com",
+    "Port": 993,
+    "UseSsl": true,
+    "Username": "sumitrathod2711@gmail.com",
+    "Password": "cczjbqpanjwefrss", // use secrets in prod
+    "ProcessedFolder": "Processed",
+    "PollIntervalSeconds": 30,
+    "SubjectKeyword": "New message from &quot;EzyGoa Taxi Services&quot;" // optional: only process mails whose subject contains this
   }
 }
