added some detail

--- a/TravelManagement/appsettings.Development.json
+++ b/TravelManagement/appsettings.Development.json
@@ -4,5 +4,24 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-UKG9315U\\SQLEXPRESS;Database=Practice;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "JwtSettings": {
+    "Key": "ThisIsMyUltraSecretSuperJwtKey123456",
+    "Issuer": "TravelManagementAPI",
+    "Audience": "TravelManagementClient",
+    "DurationInMinutes": 60
+  },
+  "Email": {
+    "Host": "imap.gmail.com",
+    "Port": 993,
+    "UseSsl": true,
+    "Username": "sumitrathod2711@gmail.com",
+    "Password": "cczjbqpanjwefrss",
+    "ProcessedFolder": "Processed",
+    "PollIntervalSeconds": 30,
+    "SubjectKeyword": "New message from \"EzyGoa Taxi Services\""
   }
 }
