--- a/TravelManagement/appsettings.json
+++ b/TravelManagement/appsettings.json
@@ -10,10 +10,10 @@
   //  "DefaultConnection": "Host=aws-0-ap-southeast-1.pooler.supabase.com;Port=5432;Database=postgres;Username=postgres.exfoiskrvhxofsfzridh;Password=mR4SS2Zmga.aHSP;SSL Mode=Require;Trust Server Certificate=True"
   //},
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-UKG9315U\\SQLEXPRESS;Database=Practice;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": ""
   },
   "JwtSettings": {
-    "Key": "ThisIsMyUltraSecretSuperJwtKey123456",
+    "Key": "",
     "Issuer": "TravelManagementAPI",
     "Audience": "TravelManagementClient",
     "DurationInMinutes": 60
@@ -22,10 +22,10 @@
     "Host": "imap.gmail.com",
     "Port": 993,
     "UseSsl": true,
-    "Username": "sumitrathod2711@gmail.com",
-    "Password": "cczjbqpanjwefrss", // use secrets in prod
+    "Username": "",
+    "Password": "",
     "ProcessedFolder": "Processed",
     "PollIntervalSeconds": 30,
-    "SubjectKeyword": "New message from &quot;EzyGoa Taxi Services&quot;" // optional: only process mails whose subject contains this
+    "SubjectKeyword": "New message from &quot;EzyGoa Taxi Services&quot;" 
   }
 }
